fixed margin collapse in contact page

--- a/_scss/_component.contact.scss
+++ b/_scss/_component.contact.scss
@@ -1,3 +1,9 @@
+#contact-page {
+    margin: 0px;
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
+
 #contact-form {
     margin-top: 20px;
 
